# modularhouse-project

./: Cargo.toml  README.md
clob-chain/: Cargo.toml
clob-chain/src/: algo.rs  main.rs
da-server/: go.mod  main.go
da-server/avail/: avail.go
fhe-clob/: Cargo.toml
fhe-clob/src/: algo.rs
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
