[package]
name = "clob-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fhe-clob = { path = "../fhe-clob" }
avail-subxt = { git = "https://github.com/availproject/avail", branch = "old_develop", default-features = false, features = ["std"]}
