[package]
name = "clob-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fhe-clob = { path = "../fhe-clob" }
avail-subxt = { git = "https://github.com/availproject/avail", branch = "main", default-features = false, features = ["api-dev", "native", "std"] }
avail-core = { git = "https://github.com/availproject/avail-core", tag = "node-v2220-rc1", default-features = false, features = ["runtime", "serde"] }
subxt = { version = "0.34.0", features = ["substrate-compat"] }
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.81"