[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
fhe-clob = { path = "../fhe-clob" }
actix-web = "4.8.0"
# avail-subxt = { git = "https://github.com/availproject/avail", branch = "main", default-features = false, features = ["std"]}
bonsai-sdk = "0.6.1"
bytemuck = "1.14.0"
anyhow = "1.0.79"
hex = "0.4.3"
bincode = "1.3.3"